-- schema_oracle.sql
-- Modelo relacional para dados de sensores industriais (Sprint 3)
-- Compatível com Oracle (ajustar conforme versão)
-- Autor: indusAI Innovations (FIAP / Hermes Reply Sprint 3)

-- 1) Domínios / tipos auxiliares (opcional em Oracle, aqui via CHECK)
-- Estados operacionais permitidos
-- 'normal', 'alerta', 'falha'
CREATE TABLE site (
  site_id         NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name            VARCHAR2(120) NOT NULL,
  city            VARCHAR2(80),
  state           VARCHAR2(40),
  created_at      TIMESTAMP DEFAULT SYSTIMESTAMP
);

CREATE TABLE asset (
  asset_id        NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  site_id         NUMBER NOT NULL,
  name            VARCHAR2(120) NOT NULL,
  type            VARCHAR2(80) NOT NULL,
  installed_at    TIMESTAMP,
  CONSTRAINT fk_asset_site FOREIGN KEY (site_id) REFERENCES site(site_id)
);

CREATE TABLE sensor_type (
  sensor_type_id  NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  code            VARCHAR2(40) UNIQUE NOT NULL,   -- e.g., TEMP, HUM, VIB, CURR, LUX, PRESS
  description     VARCHAR2(200),
  unit            VARCHAR2(20) NOT NULL           -- e.g., '°C', '%', 'mm/s', 'A', 'lux', 'kPa'
);

CREATE TABLE sensor (
  sensor_id       NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  asset_id        NUMBER NOT NULL,
  sensor_type_id  NUMBER NOT NULL,
  model           VARCHAR2(120),
  serial_number   VARCHAR2(120),
  installed_at    TIMESTAMP,
  is_active       CHAR(1) DEFAULT 'Y' CHECK (is_active IN ('Y','N')),
  CONSTRAINT fk_sensor_asset FOREIGN KEY (asset_id) REFERENCES asset(asset_id),
  CONSTRAINT fk_sensor_type FOREIGN KEY (sensor_type_id) REFERENCES sensor_type(sensor_type_id)
);

-- Tabela de leituras brutas (granularidade: 1 linha por leitura/sensor)
CREATE TABLE reading (
  reading_id      NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  sensor_id       NUMBER NOT NULL,
  ts              TIMESTAMP NOT NULL,
  value_num       NUMBER(18,6) NOT NULL,
  quality         VARCHAR2(20) DEFAULT 'OK' CHECK (quality IN ('OK','SUSPECT','MISSING')),
  CONSTRAINT fk_reading_sensor FOREIGN KEY (sensor_id) REFERENCES sensor(sensor_id)
);

-- Tabela de rótulos/estados agregados por asset/instante (para ML supervisionado)
CREATE TABLE asset_state (
  asset_state_id  NUMBER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  asset_id        NUMBER NOT NULL,
  ts              TIMESTAMP NOT NULL,
  state           VARCHAR2(20) NOT NULL CHECK (state IN ('normal','alerta','falha')),
  note            VARCHAR2(240),
  CONSTRAINT fk_asset_state_asset FOREIGN KEY (asset_id) REFERENCES asset(asset_id)
);

-- Índices úteis
CREATE INDEX idx_reading_sensor_ts ON reading(sensor_id, ts);
CREATE INDEX idx_asset_state_ts ON asset_state(asset_id, ts);

-- View exemplo para consulta consolidada da última leitura por sensor
CREATE OR REPLACE VIEW vw_sensor_latest AS
SELECT r.sensor_id,
       MAX(r.ts) AS last_ts,
       MAX(r.value_num) KEEP (DENSE_RANK LAST ORDER BY r.ts) AS last_value
  FROM reading r
 GROUP BY r.sensor_id;
